# dash_tauri_plot

./: .gitignore  README.MD  app.py  requirements.txt
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
dash-tauri-plot/: README.md  package-lock.json  package.json
dash-tauri-plot/src-tauri/: Cargo.toml  Cargo_bak.toml  launch_app_hidden.ps1  main.rs.bak  tauri.conf copy.json  tauri.conf.json  tauri.conf.json.old3
dash-tauri-plot/src-tauri/src/: lib.rs  main.rs
dash-tauri-plot/src-tauri/src/backup/: main copy.rs  main_not_closed.rs  main_sleep.rs
