[package]
name = "dash-tauri-plot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "build.rs"
[dependencies]
tauri = { version = "2", features = [] }

winapi = { version = "0.3", features = [
    "winbase",
    "winuser",
    "processthreadsapi",
    "handleapi",
    "synchapi",
    "winnt",
] }

# Optional additional dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "0.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "dash_tauri_plot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
