[package]
name = "dash-tauri-plot"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "C:\\Users\\brent\\code\\dash\\dash_tauri_plot\\dash-tauri-plot\\src-tauri\\build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The _lib suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dash_tauri_plot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
winapi = { version = "0.3", features = [
    "winbase",
    "winuser",
    "processthreadsapi",
    "handleapi",
    "synchapi",
    "winnt",
] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "0.5"
